gen/MiniJavaASTGrammarParser.py
# Generated from F:/IUST_4001/Compiler/HW4/Practical/grammars\MiniJavaASTGrammar.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniJavaASTGrammarParser ( Parser ):

    grammarFileName = "MiniJavaASTGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'String'", "'System.out.println'", 
                     "'length'", "'true'", "'false'", "'int'", "'new'", 
                     "'else'", "'if'", "'while'", "'boolean'", "'public'", 
                     "'this'", "'return'", "'extends'", "'void'", "'class'", 
                     "'static'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'.'", "'='", "'&&'", "'<'", "'!'", "'+'", 
                     "'-'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "NEW", 
                      "ELSE", "IF", "WHILE", "BOOLEAN", "PUBLIC", "THIS", 
                      "RETURN", "EXTENDS", "VOID", "CLASS", "STATIC", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "DOT", "ASSIGN", "AND", "LT", "BANG", 
                      "ADD", "SUB", "MUL", "WS", "COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER", "INTEGER_LITERAL" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_methodDeclaration = 3
    RULE_varDeclaration = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_identifier = 8

    ruleNames =  [ "program", "mainClass", "classDeclaration", "methodDeclaration", 
                   "varDeclaration", "type", "statement", "expression", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    INT=7
    NEW=8
    ELSE=9
    IF=10
    WHILE=11
    BOOLEAN=12
    PUBLIC=13
    THIS=14
    RETURN=15
    EXTENDS=16
    VOID=17
    CLASS=18
    STATIC=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    LBRACK=24
    RBRACK=25
    SEMI=26
    COMMA=27
    DOT=28
    ASSIGN=29
    AND=30
    LT=31
    BANG=32
    ADD=33
    SUB=34
    MUL=35
    WS=36
    COMMENT=37
    LINE_COMMENT=38
    IDENTIFIER=39
    INTEGER_LITERAL=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJavaASTGrammarParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniJavaASTGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.mainClass()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaASTGrammarParser.CLASS:
                self.state = 19
                self.classDeclaration()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(MiniJavaASTGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()

        def CLASS(self):
            return self.getToken(MiniJavaASTGrammarParser.CLASS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,i)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaASTGrammarParser.LBRACE)
            else:
                return self.getToken(MiniJavaASTGrammarParser.LBRACE, i)

        def PUBLIC(self):
            return self.getToken(MiniJavaASTGrammarParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(MiniJavaASTGrammarParser.STATIC, 0)

        def VOID(self):
            return self.getToken(MiniJavaASTGrammarParser.VOID, 0)

        def LPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.LPAREN, 0)

        def LBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.RBRACK, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.StatementContext,0)


        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaASTGrammarParser.RBRACE)
            else:
                return self.getToken(MiniJavaASTGrammarParser.RBRACE, i)

        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaASTGrammarParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(MiniJavaASTGrammarParser.CLASS)
            self.state = 28
            self.identifier()
            self.state = 29
            self.match(MiniJavaASTGrammarParser.LBRACE)
            self.state = 30
            self.match(MiniJavaASTGrammarParser.PUBLIC)
            self.state = 31
            self.match(MiniJavaASTGrammarParser.STATIC)
            self.state = 32
            self.match(MiniJavaASTGrammarParser.VOID)
            self.state = 33
            self.match(MiniJavaASTGrammarParser.T__0)
            self.state = 34
            self.match(MiniJavaASTGrammarParser.LPAREN)
            self.state = 35
            self.match(MiniJavaASTGrammarParser.T__1)
            self.state = 36
            self.match(MiniJavaASTGrammarParser.LBRACK)
            self.state = 37
            self.match(MiniJavaASTGrammarParser.RBRACK)
            self.state = 38
            self.identifier()
            self.state = 39
            self.match(MiniJavaASTGrammarParser.RPAREN)
            self.state = 40
            self.match(MiniJavaASTGrammarParser.LBRACE)
            self.state = 41
            self.statement()
            self.state = 42
            self.match(MiniJavaASTGrammarParser.RBRACE)
            self.state = 43
            self.match(MiniJavaASTGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()

        def CLASS(self):
            return self.getToken(MiniJavaASTGrammarParser.CLASS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,i)


        def LBRACE(self):
            return self.getToken(MiniJavaASTGrammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniJavaASTGrammarParser.RBRACE, 0)

        def EXTENDS(self):
            return self.getToken(MiniJavaASTGrammarParser.EXTENDS, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaASTGrammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(MiniJavaASTGrammarParser.CLASS)
            self.state = 46
            self.identifier()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaASTGrammarParser.EXTENDS:
                self.state = 47
                self.match(MiniJavaASTGrammarParser.EXTENDS)
                self.state = 48
                self.identifier()


            self.state = 51
            self.match(MiniJavaASTGrammarParser.LBRACE)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaASTGrammarParser.INT or _la==MiniJavaASTGrammarParser.BOOLEAN:
                self.state = 52
                self.varDeclaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaASTGrammarParser.PUBLIC:
                self.state = 58
                self.methodDeclaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(MiniJavaASTGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()

        def PUBLIC(self):
            return self.getToken(MiniJavaASTGrammarParser.PUBLIC, 0)

        def type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.TypeContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.TypeContext,i)


        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,i)


        def LPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(MiniJavaASTGrammarParser.LBRACE, 0)

        def RETURN(self):
            return self.getToken(MiniJavaASTGrammarParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MiniJavaASTGrammarParser.SEMI, 0)

        def RBRACE(self):
            return self.getToken(MiniJavaASTGrammarParser.RBRACE, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.StatementContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaASTGrammarParser.COMMA)
            else:
                return self.getToken(MiniJavaASTGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaASTGrammarParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(MiniJavaASTGrammarParser.PUBLIC)
            self.state = 67
            self.type()
            self.state = 68
            self.identifier()
            self.state = 69
            self.match(MiniJavaASTGrammarParser.LPAREN)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaASTGrammarParser.INT or _la==MiniJavaASTGrammarParser.BOOLEAN:
                self.state = 70
                self.type()
                self.state = 71
                self.identifier()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniJavaASTGrammarParser.COMMA:
                    self.state = 72
                    self.match(MiniJavaASTGrammarParser.COMMA)
                    self.state = 73
                    self.type()
                    self.state = 74
                    self.identifier()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 83
            self.match(MiniJavaASTGrammarParser.RPAREN)
            self.state = 84
            self.match(MiniJavaASTGrammarParser.LBRACE)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaASTGrammarParser.INT or _la==MiniJavaASTGrammarParser.BOOLEAN:
                self.state = 85
                self.varDeclaration()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaASTGrammarParser.T__2) | (1 << MiniJavaASTGrammarParser.IF) | (1 << MiniJavaASTGrammarParser.WHILE) | (1 << MiniJavaASTGrammarParser.LBRACE) | (1 << MiniJavaASTGrammarParser.IDENTIFIER))) != 0):
                self.state = 91
                self.statement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(MiniJavaASTGrammarParser.RETURN)
            self.state = 98
            self.expression(0)
            self.state = 99
            self.match(MiniJavaASTGrammarParser.SEMI)
            self.state = 100
            self.match(MiniJavaASTGrammarParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()

        def type(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(MiniJavaASTGrammarParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniJavaASTGrammarParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.type()
            self.state = 103
            self.identifier()
            self.state = 104
            self.match(MiniJavaASTGrammarParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()


        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr
            self.name_attr = ctx.name_attr



    class Type2Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniJavaASTGrammarParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType2" ):
                listener.enterType2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType2" ):
                listener.exitType2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType2" ):
                return visitor.visitType2(self)
            else:
                return visitor.visitChildren(self)


    class Type1Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(MiniJavaASTGrammarParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType1" ):
                listener.enterType1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType1" ):
                listener.exitType1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType1" ):
                return visitor.visitType1(self)
            else:
                return visitor.visitChildren(self)


    class Type0Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniJavaASTGrammarParser.INT, 0)
        def LBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.LBRACK, 0)
        def RBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.RBRACK, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType0" ):
                listener.enterType0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType0" ):
                listener.exitType0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType0" ):
                return visitor.visitType0(self)
            else:
                return visitor.visitChildren(self)



    def type(self):

        localctx = MiniJavaASTGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = MiniJavaASTGrammarParser.Type0Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(MiniJavaASTGrammarParser.INT)
                self.state = 107
                self.match(MiniJavaASTGrammarParser.LBRACK)
                self.state = 108
                self.match(MiniJavaASTGrammarParser.RBRACK)
                pass

            elif la_ == 2:
                localctx = MiniJavaASTGrammarParser.Type1Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(MiniJavaASTGrammarParser.BOOLEAN)
                pass

            elif la_ == 3:
                localctx = MiniJavaASTGrammarParser.Type2Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(MiniJavaASTGrammarParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.name_attr = str()


        def getRuleIndex(self):
            return MiniJavaASTGrammarParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr
            self.name_attr = ctx.name_attr



    class Statement5Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,0)

        def LBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.LBRACK, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.ExpressionContext,i)

        def RBRACK(self):
            return self.getToken(MiniJavaASTGrammarParser.RBRACK, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaASTGrammarParser.ASSIGN, 0)
        def SEMI(self):
            return self.getToken(MiniJavaASTGrammarParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement5" ):
                listener.enterStatement5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement5" ):
                listener.exitStatement5(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement5" ):
                return visitor.visitStatement5(self)
            else:
                return visitor.visitChildren(self)


    class Statement3Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(MiniJavaASTGrammarParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement3" ):
                listener.enterStatement3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement3" ):
                listener.exitStatement3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement3" ):
                return visitor.visitStatement3(self)
            else:
                return visitor.visitChildren(self)


    class Statement4Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.IdentifierContext,0)

        def ASSIGN(self):
            return self.getToken(MiniJavaASTGrammarParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(MiniJavaASTGrammarParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement4" ):
                listener.enterStatement4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement4" ):
                listener.exitStatement4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement4" ):
                return visitor.visitStatement4(self)
            else:
                return visitor.visitChildren(self)


    class Statement1Context(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaASTGrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MiniJavaASTGrammarParser.IF, 0)
        def LPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniJavaASTGrammarParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaASTGrammarParser.RPAREN, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaASTGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaASTGrammarParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(MiniJavaASTGrammarParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement1" ):
                listener.enterStatement1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement1" ):
                listener.exitStatement1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement1" ):
                return visitor.visitStatement1(self)
            else:
                return visitor.visitChildren(self)


    class Statement2Context(StatementContext):
